Fix IE bug. Removed #sidebar overflow:hidden property. [Todo: http://goo.gl/yt31l]

--- a/web/less/frontend/_sidebars.less
+++ b/web/less/frontend/_sidebars.less
@@ -1,5 +1,5 @@
 #sidebar {
-  overflow: hidden;
+//  overflow: hidden;
 }
 
 .fixed-right-300 {
